src/test/ui/no-patterns-in-args-2.stderr
error[E0642]: patterns aren't allowed in functions without bodies
  --> $DIR/no-patterns-in-args-2.rs:4:11
   |
LL |     fn f1(mut arg: u8);
   |           ^^^^^^^ pattern not allowed in function without body

error[E0642]: patterns aren't allowed in functions without bodies
  --> $DIR/no-patterns-in-args-2.rs:6:11
   |
LL |     fn f2(&arg: u8);
   |           ^^^^ pattern not allowed in function without body

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0642`.
